# ostf-config-extractor

./: .gitreview  README.md  ostf-config-extractor.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
ostf_config_extractor/: cmd.py
