[metadata]
name = ostf-config-extractor
version = 2015.1
summary = 
description-file =
    README.md
author = Illia Khudoshyn
author-email = ikhudoshyn@mirantis.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    ostf_config_extractor

[compile_catalog]
domain = ostf_config_extractor

[entry_points]
console_scripts =
    ostf-config-extractor = ostf_config_extractor.cmd:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
